services/applications/cbioportal/cbioportal-charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbioportal-service
  namespace: "services"
  labels:
    app-name: cbioportal

spec:
  selector:
    app-name: cbioportal
  ports:
    - protocol: TCP
      name: cbio-http
      port: 8080
      # targetPort: 8080
      nodePort: 8080 # only for development!

  # type: ClusterIP
  type: NodePort
