services/applications/cbioportal/cbioportal-charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: cbioportal-ingress
  namespace: "services"
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/preserve-host: "true"
    # kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
    # traefik.ingress.kubernetes.io/router.middlewares: services-add-prefix-cbioportal@kubernetescrd

spec:
  rules:
  - host:
    http:
      paths:
      - path: /cbioportal-webapp
        pathType: ImplementationSpecific
        backend:
          service:
            name: cbioportal-service
            port:
              number: 8080
